add swagger and some fixes in error codes
