# serverside/authorizationmd/index.js
@@ -3,10 +3,11 @@ const { Logs } = require("../data")
 module.exports = (req, res, next)  => {
     userId = req.userId
     try{
-        Logs.create({userId, operation: "retrieve user info"}).then(res=> res)
-        .catch(({ message }) => {
-            console.log(message)
-        })
+        Logs.create({userId, operation: "retrieve user info"})
+            .then(res=> res)
+            .catch(({ message }) => {
+                console.log(message)
+            })
     
     } catch(err) {
         console.err(err)
