# serverside/index.js
@@ -35,7 +35,7 @@ mongoose.connect(DB_URL, { useNewUrlParser: true,  useFindAndModify: false  })
         router.post('/user', jsonBodyParser, registerUser)
         router.post('/user/auth', jsonBodyParser, authenticateUser)
         router.put('/user/update', jsonBodyParser, updateUser)
-        router.get('/user', [tokenVerifierMiddleware, authMiddleware], retrieveUser)
+        router.get('/retrieveuser', [tokenVerifierMiddleware, authMiddleware], retrieveUser)
         app.listen(PORT, () => console.log(`running on port ${PORT}`))
     })
     .catch(console.error)
